--- a/Ingenium/templates/ingenium/index.html
+++ b/Ingenium/templates/ingenium/index.html
@@ -43,7 +43,7 @@
           Welcome to Ingenium, the premier club at our university dedicated to nurturing and showcasing the immense talent of our students. Founded with a vision to empower individuals and provide a platform for artistic expression, Ingenium focuses on a diverse range of activities including acting, drawing, singing, playing musical instruments, capturing photos, designing, reading, and writing.
         </p>
       </div>
-      <img src="/static/h1.jpeg" class="img-fluid">
+      <img src="{% static 'ingenium/h1.jpeg' %}" class="img-fluid">
       <br>
       <br>
       <p class="content" >
@@ -69,7 +69,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="/static/zeyad.jpeg" class="card-img-top">
+              <img src="{% static 'ingenium/zeyad.jpeg' %}" class="card-img-top">
               <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
                 <div class="card-header"><h5>Zeyad Salah</h5></div>
                 <div class="card-body">
@@ -341,19 +341,19 @@
         <p class="content" >Join us as we take a nostalgic trip back to Artsmania, a spectacular event that unfolded last year, leaving an indelible mark on our university's cultural landscape.</p>
       </div>
       <div>
-        <img src="/static/h2.jpeg" class="img-fluid">
+        <img src="{% static 'ingenium/h2.jpeg' %}" class="img-fluid">
       </div>
       <br>
       <p class="content" >Artsmania was a celebration of artistic excellence, bringing together a mesmerizing fusion of music, drama, and visual arts. As the curtains rose, our talented musicians from the Music Committee set the stage ablaze with captivating performances. Their melodic compositions and soul-stirring renditions resonated through the auditorium, captivating the audience's hearts and setting the tone for an unforgettable evening.</p>
-      <img src="/static/h3.jpeg" class="img-fluid">
+      <img src="{% static 'ingenium/h3.jpeg' %}" class="img-fluid">
       <br>
       <br>
       <p class="content" >Following the musical extravaganza, the Drama Committee took center stage, presenting the enthralling play titled "Marionette." The talented cast, with their impeccable acting skills, brought the characters to life, immersing the audience in a world of emotions, laughter, and thought-provoking storytelling. The spellbinding performances left the spectators spellbound, showcasing the depth of talent within our very own university community.</p>
-      <img src="/static/h4.jpeg" class="img-fluid">
+      <img src="{% static 'ingenium/h4.jpeg' %}" class="img-fluid">
       <br>
       <br>
       <p class="content" >At the end of Artsmania, our Art Committee hosted an exhilarating competition where our talented members showcased their breathtaking drawings. The audience participated by voting for their favorite artwork, fostering camaraderie and celebrating individual skills within our artistic community.</p>
-      <img src="/static/h5.jpeg" class="img-fluid">
+      <img src="{% static 'ingenium/h5.jpeg' %}" class="img-fluid">
       <br>
       <br>
       <p class="content" >Artsmania provided a platform for our talented students to shine, fostering a spirit of collaboration, inspiration, and appreciation for the arts. It was a testament to the vibrant and diverse artistic community thriving within our university.</p>
