--- a/Ingenium/templates/ingenium/layout.html
+++ b/Ingenium/templates/ingenium/layout.html
@@ -44,22 +44,22 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close" data-bs-target="#bdSidebar"></button>
           </div>
           <nav class="nav  flex-column">
-            <li class="nav-item" action="/index"><a class="nav-link red side-item" href="https://zeyadsalah22-studious-spork-x746grw54xp3vj96-5000.preview.app.github.dev/#what"><h5>What is Ingenium!?</h5></a></li>
+            <li class="nav-item" action="/index"><a class="nav-link red side-item" href="https://ingenium.up.railway.app/#what"><h5>What is Ingenium!?</h5></a></li>
             <p>
               Let's take you to a journey
             </p>
             <br>
-            <li class="nav-item" action="/index"><a class="nav-link red side-item" href="https://zeyadsalah22-studious-spork-x746grw54xp3vj96-5000.preview.app.github.dev/#high"><h5>HighBoard</h5></a></li>
+            <li class="nav-item" action="/index"><a class="nav-link red side-item" href="https://ingenium.up.railway.app/#high"><h5>HighBoard</h5></a></li>
             <p>
               Know more about our highboard and their story
             </p>
             <br>
-            <li class="nav-item " action="/index"><a class="nav-link red side-item" href ="https://zeyadsalah22-studious-spork-x746grw54xp3vj96-5000.preview.app.github.dev/#artsmania"><h5>Artsmania</h5></a></li>
+            <li class="nav-item " action="/index"><a class="nav-link red side-item" href ="https://ingenium.up.railway.app/#artsmania"><h5>Artsmania</h5></a></li>
             <p>
               The event that opened the way for our talents to shine
             </p>
             <br>
-            <li class="nav-item" action="/index"><a class="nav-link red side-item" href="https://zeyadsalah22-studious-spork-x746grw54xp3vj96-5000.preview.app.github.dev/#application"><h5>Application</h5></a></li>
+            <li class="nav-item" action="/index"><a class="nav-link red side-item" href="https://ingenium.up.railway.app/#application"><h5>Application</h5></a></li>
             <p>
               Don't hestitate joining us and show the world your talent
             </p>
