--- a/Ingenium/templates/ingenium/media.html
+++ b/Ingenium/templates/ingenium/media.html
@@ -43,7 +43,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner ">
                 <div class="carousel-item active ">
-                    <img src="{% static 'ingenium/.jpeg' %}" class="img-acc">
+                    <img src="{% static 'ingenium/media1.jpeg' %}" class="img-acc">
                 </div>
                 {% for image in images%}
                 <div class="carousel-item">
