--- a/Ingenium/templates/ingenium/index.html
+++ b/Ingenium/templates/ingenium/index.html
@@ -33,7 +33,7 @@
 </li>
 {%endblock%}
 {%block main%}
-<div class="col-9 mx-auto ">
+<div class="col-md-9 col-ms-12 mx-auto ">
   <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
     <div id="what" class="py-3">
       <div class="section">
