--- a/Ingenium/templates/ingenium/layout.html
+++ b/Ingenium/templates/ingenium/layout.html
@@ -21,7 +21,7 @@
           <span class="d-none fs-6 pe-1">Browse</span>
         </button>
             <a class="navbar-brand" href="/">
-                <h1 class="red">Ingenium</h1>
+                <h1 style="color:red;">Ingenium</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
