--- a/Ingenium/templates/ingenium/index.html
+++ b/Ingenium/templates/ingenium/index.html
@@ -113,7 +113,7 @@
       <div class="section">
         <h2>Application </h2>
         <hr>
-        <p>Application will open soon!</p>
+        <p>You can apply now through this <a href="https://docs.google.com/forms/d/e/1FAIpQLSchZ5an_wejwgohramR0T65iE9x0f0EMaTr6MAtMClkrLbJ-A/viewform?usp=sf_link">link</a></p>
       </div>
     </div>
 </div>
